# kwlt-production-automation

./: .gitignore  FEEDBACK.md  FUTURE_FEATURES.md  README.md  env.sh
.github/: copilot-instructions.md
.github/workflows/: slack-service-tests.yml
slack-service/: .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
slack-service/app/: config.py  constants.py  handlers.py  main.py  messages.py  models.py  reminder_logic.py  sheets.py  slack_client.py  task_templates.py  verify.py
slack-service/tests/: conftest.py  test_actions.py  test_endpoints.py  test_events.py  test_handlers.py  test_home_tab.py  test_logic.py  test_messages.py  test_verify.py
slack-service/tests/golden/: interaction_blocks.json  reminder_blocks.json
src/: Config.gs  EmailIntegration.gs  ReminderEngine.gs  SeasonOverview.gs  Secrets.gs  Setup.gs  ShowTimeline.gs  SlackIntegration.gs  TaskTemplateData.gs  TestUtils.gs  WebApp.gs  appsscript.json
