[project]
name = "kwlt-slack-service"
version = "0.1.0"
description = "KWLT Production Automation — Slack Service & RAG Q&A"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "slack-sdk>=3.33.0",
    "gspread>=6.1.0",
    "google-auth>=2.35.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]
rag = [
    "openai>=1.50.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 120
